[project]
name = "ml-forecast-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch>=2.6.0",
  "torchvision>=0.21.0",
  "torchaudio >=2.6.0",
  "dvc>=3.59.1",
  "mlflow>=2.21.0",
  "pytest>=8.3.5",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
